Restructure Config.java and associated classes to incorporate the new config structure.